--- a/index.html
+++ b/index.html
@@ -5,101 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Async me, I mean my button</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Solway:wght@400;500;700&display=swap");
-
-      :root {
-        --pink: #bc616e;
-        --purple: #bc7ebe;
-        --green: #baf5a9;
-        --turqouise: #4fc3aa;
-        --grey: #bdc2c1;
-        --black: #0c0c0c;
-      }
-
-      *,
-      *::before,
-      *::after {
-        box-sizing: border-box;
-      }
-
-      body {
-        margin: 0;
-        font-family: "Solway", serif;
-        font-size: 16px;
-        background-color: var(--grey);
-      }
-
-      .main {
-        margin: 5rem auto;
-        padding: 100px 0;
-        background-color: var(--green);
-        /* border: 5px solid var(--black); */
-      }
-
-      .container {
-        width: 90%;
-        /* margin: 0 auto; */
-        max-width: 100vw;
-        margin-bottom: 2rem;
-        border: 5px solid red;
-      }
-
-      .grid {
-        display: grid;
-        gap: 2rem;
-        padding: 2rem;
-        grid-template-columns: repeat(auto-fill, minmax(6rem, 1fr));
-        grid-template-rows: repeat(auto-fill, minmax(3rem, 1fr));
-        grid-auto-flow: dense;
-        align-items: center;
-      }
-
-      .btn {
-        border: 0;
-        color: var(--turqouise);
-        background: var(--purple);
-        font-size: 5em;
-        font-family: "Solway", serif;
-        font-weight: 700;
-        transition: 0.7s ease-in-out;
-      }
-
-      .btn:hover {
-        background: var(--black);
-      }
-
-      .btn:focus {
-        grid-column: span 4;
-      }
-
-      .col {
-        grid-column: 1 / -1;
-        grid-row: 1 / span 2;
-        padding: 2rem;
-      }
-
-      @media (min-width: 1000px) {
-        :nth-child(2n + 1) {
-          grid-column: span 3;
-        }
-
-        :nth-child(2n + 0) {
-          grid-column: span 5;
-        }
-
-        .btn:focus {
-          grid-column: span 10;
-        }
-
-        .grid {
-          grid-template-rows: repeat(auto-fill, minmax(6rem, 1fr));
-        }
-      }
-    </style>
-
     <div class="main">
       <div class="container grid">
         <button class="btn btn1" contenteditable="">1</button>
@@ -128,49 +36,19 @@
         ><button class="btn btn28">28</button
         ><button class="btn btn29">29</button
         ><button class="btn btn30" contenteditable>30</button>
+        <button class="btn btn31" contenteditable>31</button>
         <div class="col" contenteditable>
           <h2>HI</h2>
           <p>
             Try to find the cookie before the time runs out. You only have 5
-            seconds from NOW! Watch out there are also some hidden secrets among
-            these buttons. Dont check the console, or inspect this page, because
-            that is... ok, but try first. Hopefully some of it will lead show
-            you to something special.
+            seconds from NOW! Watch out because there are also some hidden
+            secrets among these buttons. But don't check the console, or inspect
+            this page, because that's cheating. Okay, but at least try first.
+            Hopefully some of it will lead you to something special.
           </p>
         </div>
       </div>
     </div>
-    <script>
-      const btns = document.querySelectorAll(".btn");
-      const buttons = Array.from(btns);
-      const rand = Math.floor(Math.random() * 30);
-      const timeout = 5000;
-      const button = buttons[rand];
-      const numButton = button.textContent;
-      const unluckyButton = buttons[12];
-
-      function changeButton(timeout) {
-        const button = buttons[rand];
-        console.log(button, "🍪");
-        button.textContent = "🍪 ";
-        setTimeout(() => {
-          button.textContent = numButton;
-          console.log(numButton);
-        }, timeout);
-      }
-
-      buttons.forEach((button) =>
-        button.addEventListener("click", changeButton(timeout))
-      );
-
-      unluckyButton.addEventListener("click", () => {
-        document.querySelector(".main").innerHTML = `
-        <a href="https://github.com/purplehippo911">
-            <img src="shyguy.jpg" alt="shyguy">
-            <p> OOPS! You pushed the unlucky button!! Reload the page to try again. And dont forget to check out my other projects, by clicking on the image above.</p>
-        </a>
-        `;
-      });
-    </script>
+    <script src="app.js"></script>
   </body>
 </html>
