--- a/index.html
+++ b/index.html
@@ -36,15 +36,14 @@
         ><button class="btn btn28">28</button
         ><button class="btn btn29">29</button
         ><button class="btn btn30" contenteditable>30</button>
-        <button class="btn btn31" contenteditable>31</button>
+        <button class="btn btn31">🍪</button>
         <div class="col" contenteditable>
           <h2>HI</h2>
           <p>
-            Try to find the cookie before the time runs out. You only have 5
+            Try to find the hidden cookie before the time runs out. You have 5
             seconds from NOW! Watch out because there are also some hidden
-            secrets among these buttons. But don't check the console, or inspect
-            this page, because that's cheating. Okay, but at least try first.
-            Hopefully some of it will lead you to something special.
+            secrets among these buttons. Checking the console or inspecting this
+            page, won't help you as much as you may think.
           </p>
         </div>
       </div>
